# root-locus

./: Cargo.toml  LICENSE  README.md  out.txt
src/: lib.rs  main.rs  midware.rs  rng.rs
src/midware/: curves.rs  mod.rs
src/plot/: macroquad.rs  mod.rs  shader.wgsl  wgpu.rs
src/polynomials/: mod.rs  root_locus.rs  roots.rs
src/transfer_functions/: mod.rs
